--- a/landingstyle.css
+++ b/landingstyle.css
@@ -1,12 +1,12 @@
-/* Reset styling */
 body {
+    background-color: #2e2e2e;
     margin: 0;
-    font-family: Arial, sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
 }
 
 /* Navigation bar styling */
 header {
-    background-color: #333;
+    background-color: #2e2e2e;
     color: white;
 }
 
@@ -16,6 +16,7 @@ header {
     justify-content: center;
     padding: 0;
     margin: 0;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .nav-menu li {
