--- a/landingstyle.css
+++ b/landingstyle.css
@@ -6,7 +6,7 @@ body {
 
 /* Navigation bar styling */
 header {
-    background-color: #2e2e2e;
+    background-color: #4D1979;
     color: white;
 }
 
