--- a/landingstyle.css
+++ b/landingstyle.css
@@ -10,6 +10,12 @@ header {
     color: white;
 }
 
+h1 {
+    background-color: #dimgray;
+    color: white;
+    justify-content: center;
+}
+
 .nav-menu {
     list-style-type: none;
     display: flex;
