--- a/landingstyle.css
+++ b/landingstyle.css
@@ -16,6 +16,18 @@ h1 {
     justify-content: center;
 }
 
+h2 {
+    background-color: #dimgray;
+    color: white;
+    justify-content: center;
+}
+
+ol {
+    background-color: #dimgray;
+    color: white;
+    justify-content: center;
+}
+
 .nav-menu {
     list-style-type: none;
     display: flex;
