--- a/landingstyle.css
+++ b/landingstyle.css
@@ -119,7 +119,7 @@ img {
 
 /* Rules box styling */
 .rules-box {
-    background-color: #d3d3d3; /* Lighter grey */
+    background-color: #f0f0f0; /* Lighter grey */
     color: black; /* Black font color */
     border-radius: 8px;
     padding: 20px;
@@ -133,7 +133,7 @@ img {
     margin: 0;
     padding: 10px 0;
     text-align: center;
-    background-color: #c0c0c0; /* Slightly darker grey for the title background */
+    background-color: #2e2e2e; /* Slightly darker grey for the title background */
     border-radius: 8px;
 }
 
