--- a/week-overview.css
+++ b/week-overview.css
@@ -103,26 +103,14 @@ main {
     text-align: center;
 }
 
-img {
-    margin: 20px 0;
-    border-radius: 8px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-}
-
-/* Rules box styling */
 .week-box {
-    background-color: dimgray;
+    background-color: #f0f0f0;
     color: white;
     border-radius: 8px;
-    padding: 20px;
-    max-width: 640px; /* Adjust to be slightly wider than the image */
-    margin: 20px auto;
+    padding: 8px;
+    max-width: 1000px; /* Adjust to be slightly wider than the image */
+    margin: 8px auto;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
     text-align: left;
 }
 
-.rules-box ol {
-    margin: 0;
-    padding-left: 20px;
-    line-height: 1.6;
-}
