--- a/mac-gotw-style.css
+++ b/mac-gotw-style.css
@@ -137,7 +137,7 @@ td:first-child {
     color: white;
 }
 
-/* Save Button Styling */
+/* Save Picks Button Styling */
 button {
     background-color: #4D1979;
     color: white;
@@ -147,10 +147,11 @@ button {
     font-weight: bold; /* Bold font */
     border-radius: 5px;
     cursor: pointer;
-    margin: 40px auto; /* Increased margin to push the button further down from the table */
-    display: block;
+    margin: 20px 0; /* Remove auto centering */
+    display: inline-block; /* Make the button inline */
     text-align: center;
     transition: background-color 0.3s ease, box-shadow 0.3s ease;
+    float: right; /* Align button to the right */
 }
 
 button:hover {
