--- a/futures-style.css
+++ b/futures-style.css
@@ -152,7 +152,7 @@ input[type="text"]:focus {
     box-shadow: 0 0 5px #4D1979;
 }
 
-button {
+.save-button {
     background-color: #4D1979;
     color: white;
     border: 2px solid white; /* Added white border */
