--- a/mac-gotw-style.css
+++ b/mac-gotw-style.css
@@ -137,7 +137,7 @@ td:first-child {
     color: white;
 }
 
-button {
+.save-button {
     background-color: #4D1979;
     color: white;
     border: 2px solid white; /* Added white border */
